Added Poker and Jar
-- Added a JAR file to run this stuff
-- Added a poker game
-- It's now a fully functional console game yay